--- a/index.html
+++ b/index.html
@@ -927,3 +927,21 @@
     <script type="module">
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js';
         import { getAuth, signInWithPopup, GoogleAuthProvider, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js';
+        import { getAnalytics } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-analytics.js';
+        import { getFirestore, doc, setDoc, getDoc } from 'https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js';
+
+        const firebaseConfig = {
+            apiKey: "AIzaSyDCV9yTXFJ0yj1m9hZijs8OxIcfdK95nG8",
+            authDomain: "kwive0.firebaseapp.com",
+            projectId: "kwive0",
+            storageBucket: "kwive0.firebasestorage.app",
+            messagingSenderId: "314643228056",
+            appId: "1:314643228056:web:d74237b3066993eaa0f7ed",
+            measurementId: "G-61G51M1F21"
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+        const analytics = getAnalytics(app);
+        const db = getFirestore(app);
+        const provider = new GoogleAuthProvider();
