--- a/index.html
+++ b/index.html
@@ -291,8 +291,9 @@
         }
         
         .category-header {
-            text-align: center;
+            text-align: right;
             margin-bottom: 48px;
+            padding-right: 60px;
         }
         
         .category-title {
